# matrix-cpp

./: AUTHORS  Dockerfile  Makefile.am  configure.ac
src/: matrix.cc
src/core/: coordinator.hpp  macro.hpp  task.hpp  task_collection.hpp  task_manager.hpp  util.hpp
